longhorn/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: longhorn-ingress
    namespace: longhorn-system
  spec:
    ingressClassName: nginx
    rules:
      - host: storage.home
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: longhorn-frontend
                  port:
                    number: 80
              path: /
